# eform

./: Cargo.toml
src/: app.rs  form.rs  lib.rs  main.rs  question.rs
src/gform/: feedback.rs  forms.rs  mod.rs  responses.rs
src/gform_models/: forms.rs  mod.rs  responses.rs  watches.rs
src/question/: config.rs  config_types.rs  data.rs  mod.rs  types.rs  value.rs  value_types.rs
