[package]
name = "eform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.eframe]
version = "0.20.1"
features = ["persistence", "dark-light"]

[dependencies.serde]
version = "1.0.151"

[dependencies.serde_json]
version = "1.0.91"
